Return Intent del avion
Se agrego las funciones de recoger los datos y de pasarlos de vuelta al home activity por medio de un setResult, queda aclarar porque el Entorno de programacion marca una funciones

--- a/app/src/main/res/layout/activity_avion.xml
+++ b/app/src/main/res/layout/activity_avion.xml
@@ -7,11 +7,11 @@
     tools:context=".AvionActivity">
 
     <Button
+        android:id="@+id/boton_guardar_avion"
         android:layout_width="205dp"
         android:layout_height="62dp"
         android:layout_marginBottom="44dp"
         android:background="@color/colorPrimary"
-        android:onClick="ticketeData"
 
 
         android:text="Guardar"
