--- a/app/src/main/res/layout/activity_avion.xml
+++ b/app/src/main/res/layout/activity_avion.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AvionActivity">
+    tools:context="com.example.splash_table_kotli.AvionActivity">
 
     <Button
         android:id="@+id/boton_guardar_avion"
