--- a/app/src/main/res/layout/activity_avion.xml
+++ b/app/src/main/res/layout/activity_avion.xml
@@ -29,9 +29,10 @@
         android:layout_marginRight="36dp"
         android:hint="Número de Cedula"
         android:inputType="number"
-        android:maxLength="8"
+        android:maxLength="9"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
+        />
 
     <RadioGroup
         android:id="@+id/radioGroup2"
